# backend/test/fixtures/openapi-baseline.json
@@ -4448,6 +4448,15 @@
         }
       }
     },
+    "/api/v1/admin/platform-info": {
+      "get": {
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
     "/api/v1/admin/price-lists-engine": {
       "get": {
         "responses": {
